--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 	  <meta charset="utf-8">
-	  <title>My First Page</title>
+	  <title>My First Page 1</title>
 	</head>
 	<body>
 		<nav></nav>
